--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     font-family: 'Tajawal', sans-serif;
     background-color: #fff;
-    direction: rtl;
+    /* direction: rtl; */
 }
 
 * {
@@ -71,7 +71,7 @@ header .menu-bar > div:hover {
 
 header .center-bar button {
     top: 7px;
-    left: 0;
+    right: 0;
     color: #000;
     font-family: 'Tajawal', sans-serif;
     font-size: 18px;
