--- a/assets/pg/admins/css/style.css
+++ b/assets/pg/admins/css/style.css
@@ -183,7 +183,7 @@ body {
 
 .path-bar > button {
     top: 8px;
-    left: 10px;
+    right: 10px;
     color: white;
     font-family: 'Tajawal', sans-serif;
     font-size: 15px;
@@ -258,7 +258,7 @@ thead tr th {
     font-family: 'Tajawal', sans-serif;
     font-size: 18px;
     padding: 10px;
-    text-align: right;
+    text-align: left;
 }
 
 tbody tr td {
