--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@ body {
 
 .header-bar {
     width: 100%;
-    color: white;
+    color: #e0cda9;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
-    background-color: #ff00aa
+    background-color: #e0cda9
     ;
     padding: 8px 0;
 }
@@ -31,7 +31,7 @@ body {
 header {
     width: 100%;
     padding: 10px;
-    box-shadow: 0px 0px 10px #ff00aa;
+    box-shadow: 0px 0px 10px #e0cda9;
 }
 
 .center-bar {
@@ -62,9 +62,9 @@ header .menu-bar > div:hover {
 }
 
 .logo-wbs {
-    width: 174px;
-    height: 99px;
-    background-image: url("./assets/img/last.png");
+    width: 200px;
+    height: 130px;
+    background-image: url("./assets/img/logonature2.png");
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
@@ -77,8 +77,8 @@ header .center-bar button {
     font-family: Arial, sans-serif;
     font-size: 18px;
     font-weight: 500;
-    border: 1px solid #efefef;
-    background-color: #d6ccd4;
+    border: 1px solid #e0cda9;
+    background-color: #e0cda9;
     padding: 10px 15px;
     cursor: pointer;
     position: absolute;
@@ -215,7 +215,7 @@ button.order-now {
     background-color: #7EC855;
     padding: 12px 20px;
     cursor: pointer;*/
-background-color: #d6ccd4;
+background-color: #e0cda9;
 border-radius: 50px;
 border-width: 0;
 box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
@@ -225,11 +225,12 @@ display: inline-block;
 font-family: Arial, sans-serif;
 font-size: 1em;
 height: 50px;
-padding: 0 25px;
+padding: 0 50px;
 transition: all 200ms;
-width: 80%;
+width: 50%;
 padding: 12px 20px;
 text-align: center;
+margin-top: 40px;
 }
 
 #shw_img_main {
@@ -316,7 +317,7 @@ text-align: center;
     background-color: #2C3E50;
     padding: 10px 15px;
     cursor: pointer;*/
-    background-color: #d6ccd4;
+    background-color: #e0cda9;
 border-radius: 50px;
 border-width: 0;
 box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
@@ -509,7 +510,7 @@ text-align: center;
         background-color: #7EC855;
         padding: 12px 20px;
         cursor: pointer;*/
-        background-color: #d6ccd4;
+        background-color: #e0cda9;
 border-radius: 50px;
 border-width: 0;
 box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
