--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Tajawal', sans-serif;
-    background-color: #fff;
+    background-color: #faf7f0;
     /* direction: rtl; */
 }
 
@@ -273,7 +273,7 @@ margin-top: 40px;
     color: #CC0000;
     position: absolute;
     top: 0;
-    left: 20px;
+    right: 20px;
 }
 
 .container-form input[type=text],
