--- a/assets/pg/admins/css/style.css
+++ b/assets/pg/admins/css/style.css
@@ -119,7 +119,7 @@ body {
     height: auto;
     color: #522a34;
     font-size: 18px;
-    border-bottom: 1px solid #2A3B52;
+    border-bottom: 1px solid #b7a78b;
     padding: 10px 15px;
     transition: 0.3s all;
 }
@@ -148,7 +148,7 @@ body {
     height: auto;
     color: #030c0e;
     font-size: 18px;
-    border-bottom: 1px solid #2A3B52;
+    border-bottom: 1px solid #b7a78b;
     padding: 10px 15px;
     transition: 0.3s all;
 }
@@ -227,7 +227,7 @@ body {
 
 .panel-bar > div > div {
     margin-top: 10px;
-    color: #0088ff;
+    color: #522a34;
     font-size: 25px;
 }
 
